[package]
name = "keychain-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-foundation = { version = "0.9.3", features = ["mac_os_10_8_features"] }
security-framework = { version = "2.9.2", features = ["OSX_10_15"] }
argon2 = "0.5.2"
aes-gcm = "0.10.3"
zeroize = "1.6.0"
rand_core = "0.6.4"
log = "0.4.20"
